@@ -60,11 +60,11 @@ def add_parser_channels(p, dashc=True):
     p.add_argument(*channel_args,
         action = "append",
         help = """additional channel to search for packages. These are URLs searched in the order
-        they are given (including file:// for local directories).  Then, the defaults 
-        or channels from .condarc are searched (unless --override-channels is given).  You can use 
+        they are given (including file:// for local directories).  Then, the defaults
+        or channels from .condarc are searched (unless --override-channels is given).  You can use
         'defaults' to get the default packages for conda, and 'system' to get the system
-        packages, which also takes .condarc into account.  You can also use any name and the 
-        .condarc channel_alias value will be prepended.  The default channel_alias 
+        packages, which also takes .condarc into account.  You can also use any name and the
+        .condarc channel_alias value will be prepended.  The default channel_alias
         is http://conda.binstar.org/""" # we can't put , here; invalid syntax
     )
     p.add_argument(
